# CMakeWithCPP

./: CMakeLists.txt  learnings.md  main.cpp  readme.md
converters/: CMakeLists.txt  converters.h
converters/src/: CMakeLists.txt  converters.cpp
math/: CMakeLists.txt  operations.h
math/src/: CMakeLists.txt  operations.cpp
